Fixed some mistakes I made on mobile sizes.

--- a/client/src/pages/Home/Home.css
+++ b/client/src/pages/Home/Home.css
@@ -44,18 +44,15 @@ body {
   }
   .home-page #image-home03 {
       width: 100%;
-
   }
   .home-page #image-home04 {
       width: 100%;
       height: 100.5%;
-
   }
   .home-page #image-statimg03 {
       height: 90%;
       width: 60%;
       margin-top: 17%;
-
   }
   .home-page #image-statimg01 {
       height: 110%;
@@ -70,7 +67,9 @@ body {
 
 @media screen and (max-width: 991px) {
   .home-page img {
-      max-height: 80vh;
+      max-width: 60%;
+  }
+  .home-page #image-statimg02 {
       max-width: 80%;
   }
 }
